--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -1,7 +1,4 @@
-﻿l_english:
-
-
-# ---------------------------------------------------------------
+﻿l_english: #---------------------------------------------------------------
 #	AUTHORITIES
 # ---------------------------------------------------------------
  auth_direct_democratic:0 "Direct Democracy"
@@ -351,12 +348,17 @@ personality_hive_kind_desc:0 "Driven by the desire of understanding single-minde
 
 gov_anarchy_communism:0 "Military Communism"
 gov_anarchy_communism_desc:0 "An extreme form of Communist dictatorship, characterized with nationalization of all industries and the introduction of strict centralized management, state control of foreign trade, strict discipline for workers, with strikes forbidden and obligatory labor duty by non-working classes."
+RT_GENERALISSIMO:0 "Generalissimo"
 
 gov_soviet_republic:0 "Soviet Republic"
 gov_soviet_republic_desc:0 "A type of republic ruled by directly elected ''Soviets'' - workers' councils, which are directly responsible to their electors. There is no separation of powers, and elected Delegates act as legislators, government and courts in one."
 
+ RT_GENSEK:0 "General Secretary"
+
 gov_aristocratic_monarchy:0 "Aristocratic Monarchy"
 gov_aristocratic_monarchy_desc:0 "Form of monarchy, in which hereditary Ruler does not have absolute power, but has to share it with the most influential members of Nobility."
+ HT_PRINCE:0 "Prince"
+ HT_PRINCESS:0 "Princess"
 
 gov_liberal_democracy:0 "Liberal Democracy"
 gov_liberal_democracy_desc:0 "A form of government, characterized by elections between multiple distinct political parties, a separation of powers, a market economy with private property and the equal protection of civil rights, civil liberties and political freedoms."
@@ -372,6 +374,7 @@ gov_congress_republic_desc:0 "A form of representative democracy, in which power
 
 gov_noble_aristocracy:0 "Noble Aristocracy"
 gov_noble_aristocracy_desc:0 "The whole political power in this society belongs to the council of representatives of the ancient patrimonial aristocratic Houses."
+RT_REGENT:0 "Regent"
 
 
 gov_absolute_monarchy:0 "Absolute Monarchy"
@@ -382,10 +385,14 @@ gov_cor_dictatorship_desc:0 "An extremely capitalistic form of government, where
 
 gov_dread_brotherhood:0 "Dreadful Brotherhood"
 gov_dread_brotherhood_desc:0 "An extremely xenophobic form of direct democracy, where all citizens are bound by the common goal - the destruction of all lesser life forms in the galaxy."
+RT_BROTHER:0 "Brother"
+RT_SISTER:0 "Sister"
 
 
 gov_enlighted_socialism: "Enlightened Socialism"
 gov_enlighted_socialism_desc: "This government is a form of a communistic monarchy, where the ideology is held to a status close to religion and the wise ruler is undisputedly regarded as an enlightened architect of the brighter future."
+RT_SAGE:0 "Sage"
+HT_PROSELYTE:0 "Proselyte"
 
 gov_bur_collectivism:0 "Bureaucratic Collectivism" 
 gov_bur_collectivism_desc:0 "A bureaucratic Cooperative state owns the means of production, while the surplus or profit is distributed among an elite party bureaucracy, rather than among the working class." 
@@ -396,6 +403,7 @@ gov_slaver_republic_desc:0 "This government is an extremely elitist form of Repu
 
 gov_genuine_aristocracy:0 "Genuine Aristocracy"
 gov_genuine_aristocracy_desc:0 "An idealistic form of government, where ruling Elite considers the interests of society and cares about the people."
+ RT_PRINCEPS:0 "Princeps"
 
 gov_peoples_republic:0 "People's Republic"
 gov_peoples_republic_desc:0 "Government is a pseudo-$ethic_egalitarian_minor$ form of dictatorship. There is an actual parliament, but it's dominated by a single political power - so-called ''People's Party''."
@@ -431,12 +439,15 @@ gov_minarchy_desc:0 "A form of minimal ''night-watchman'' state, that is not res
  
 gov_republican_dictatorship:0 "Republican Dictatorship"
 gov_republican_dictatorship_desc:0 "A governmental form where elected representatives exercise absolute power over the state. Rulers are voted in and reign until death, then a new ruler gets voted in."
+RT_DICTATOR:0 "Dictator"
 
  gov_peoples_commissariat:0 "People's Commissariat"
  gov_peoples_commissariat_desc:0 "This government is an advanced form of communist autocracy, where the state is controlled by the most apt and valid, each one controlling particular and semi-autonomous sectors of the empire. The citizenry is encouraged to put their heads down and work towards a better future within its sector, following the empire and commissariat rules."
+RT_DEPUTY:0 "People's Deputy"
 
  gov_national_socialism:0 "Fascist Regime"
  gov_national_socialism_desc:0 "This government is a centralized form of authoritarian autocracy, where the head of state is an individual that holds all the power over the empire. The citizenry is subdued to a strong economic and social regimentation, and opposition is forcefully suppressed."
+RT_DUCE:0 "Duce"
 
 # ------------------------------------------------- Changes
  gov_tec_citizen_imperial_stratocracy:0 "Imperial Stratocracy"
@@ -508,6 +519,7 @@ gov_republican_dictatorship_desc:0 "A governmental form where elected representa
  gov_demos_cratos_desc:0 "This government is a form of democracy, where people directly decide on policy initiatives, either through vote or consensus."
  auth_democratic:0 "Indirect Democracy"
  auth_democratic_desc:0 "Indirect democracies have regular elections where all citizens can vote on who should represent them."
+ RT_DEMOS_CRATOS:0 "First Speaker"
  
  gov_plutocratic_oligarchy:0 "Plutocratic Oligarchy"
  gov_plutocratic_oligarchy_desc:0 "This government is a form of oligarchy, where power rests with a committee of powerful and influential leaders, that run the large bureaucratic engine overseeing all matters of the state."
