More concepts and fixes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1056,7 +1056,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_overmind_drone:0 "Overmind Drone"
  job_tec_overmind_drone_plural:0 "Overmind Drones"
  job_tec_overmind_drone_desc:0 "Overminds are the top of the drone hierarchy, a direct manifestation of the hiveminds consciousness and, in fact, a direct part of it physically produced to control an entire planet."
- job_tec_overmind_drone_effect_desc:0 "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$ consume large amounts of $tec_loc_basic_resources$ generating §Y$tec_loc_unity$§!, £mod_planet_amenities_no_happiness_add£ §YAmenities§! and boosting both £job£ §YDrone Output§! and §YUpkeep§!."
+ job_tec_overmind_drone_effect_desc:0 "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$ consume large amounts of $tec_loc_basic_resources$ generating §Y$tec_loc_unity$§!, §Y$tec_loc_amenities_gestalt$§! and boosting both £job£ §YDrone Output§! and §YUpkeep§!."
  mod_job_tec_overmind_drone_add:0 "$job_tec_overmind_drone$ Jobs"
  mod_job_tec_overmind_drone_per_pop:0 "§G+1§! £mod_job_tec_overmind_drone_add£ $job_tec_overmind_drone$ Job per $VALUE$ Pops"
  mod_job_tec_overmind_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_overmind_drone_add£ per $VALUE$ £pop£"
@@ -1065,7 +1065,7 @@ tec_jump_empty:0 "\n\n"
  job_tec_mental_servant:0 "Mental Slave"
  job_tec_mental_servant_plural:0 "Mental Slaves"
  job_tec_mental_servant_desc:0 "Deprived of free will and agency and deeply bound to the hivemind, these organics are completely subdued, in body and mind, to the desires of the collective, serving as tools and workers for their designs."
- job_tec_mental_servant_effect_desc:0 "£job_servant£ $job_tec_mental_servant_plural$ produce £trigger_tec_research£ §YResearch§! and £mod_planet_amenities_no_happiness_add£ §YAmenities§!, using less £housing£ Housing than usual."
+ job_tec_mental_servant_effect_desc:0 "£job_servant£ $job_tec_mental_servant_plural$ produce £trigger_tec_research£ §YResearch§! and §Y$tec_loc_amenities_gestalt$§!, using less £housing£ Housing than usual."
  mod_job_tec_mental_servant_add:0 "$job_tec_mental_servant$ Jobs"
  mod_job_tec_mental_servant_per_pop:0 "§G+1§! £mod_job_servant_add£ $job_tec_mental_servant$ Job per $VALUE$ Pops"
  mod_job_tec_mental_servant_per_pop_short:0 "\n§G+1§! £mod_job_servant_add£ per $VALUE$ £pop£"
@@ -1997,7 +1997,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_planner_drone:0 "Planner Drone"
  job_tec_planner_drone_plural:0 "Planner Drones"
  job_tec_planner_drone_desc:0 "Meticulous drones assigned to fabricate specific construction templates to improve and facilitate the development of colonies and planets as a whole."
- job_tec_planner_drone_effect_desc:0 "£job_tec_planner_drone£ $job_tec_planner_drone_plural$ convert $tec_loc_basic_resources$ into £unity£ §YUnity§!, £mod_planet_amenities_no_happiness_add£ §YAmenities§! and $tec_loc_basic_resources$ based on the planet type."
+ job_tec_planner_drone_effect_desc:0 "£job_tec_planner_drone£ $job_tec_planner_drone_plural$ convert $tec_loc_basic_resources$ into £unity£ §YUnity§!, §Y$tec_loc_amenities_gestalt$§! and $tec_loc_basic_resources$ based on the planet type."
  mod_job_tec_planner_drone_add:0 "$job_tec_planner_drone$ Jobs"
  mod_job_tec_planner_drone_per_pop:0 "§G+1§! £mod_job_tec_planner_drone_add£ $mod_job_tec_planner_drone_add$ Job per $VALUE$ Pops"
  mod_job_tec_planner_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_planner_drone_add£ per $VALUE$ £pop£"
@@ -2060,7 +2060,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_hive_admin_drone:0 "Behavioral Regulator"
  job_tec_hive_admin_drone_plural:0 "Behavioral Regulators"
  job_tec_hive_admin_drone_desc:0 "Highly specialised drones focused to ensure the correct working of colonies, serving as arbiters and regulators for the collective or, even, direct manifestation of the Hivemind and procurating a direct action and development of the collective focis and needs."
- job_tec_hive_admin_drone_effect_desc:0 "£job_tec_hive_admin_drone£ $job_tec_hive_admin_drone_plural$ generates £mod_planet_amenities_no_happiness_add£ §YAmenities§!, §Y$tec_loc_unity$§! and a job bonus based on the §YEmpire predominant Ethics§!."
+ job_tec_hive_admin_drone_effect_desc:0 "£job_tec_hive_admin_drone£ $job_tec_hive_admin_drone_plural$ generates §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_unity$§! and a job bonus based on the §YEmpire predominant Ethics§!."
  mod_job_tec_hive_admin_drone_add:0 "$job_tec_hive_admin_drone$ Jobs"
  mod_job_tec_hive_admin_drone_per_pop:0 "§G+1§! $job_tec_hive_admin_drone$ Job Per $VALUE$ Pops"
  mod_job_tec_hive_admin_drone_per_pop_short:0 "\n§G+1§! £job_tec_hive_admin_drone_add£ per $VALUE$ £pop£"
@@ -2068,7 +2068,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_machine_admin_drone:0 "Command Relay"
  job_tec_machine_admin_drone_plural:0 "Command Relays"
  job_tec_machine_admin_drone_desc:0 "Effective pseudo-autonomous units deployed by the main computing core in order to administrate the input and output efficiency of each world, being a direct manifestation of the coordination nodes of the entire empire."
- job_tec_machine_admin_drone_effect_desc:0 "£job_tec_machine_admin_drone£ $job_tec_machine_admin_drone_plural$ generates £mod_planet_amenities_no_happiness_add£ §YAmenities§!, §Y$tec_loc_unity$§! and a job bonus based on the §YEmpire predominant Ethics§!."
+ job_tec_machine_admin_drone_effect_desc:0 "£job_tec_machine_admin_drone£ $job_tec_machine_admin_drone_plural$ generates §Y$tec_loc_amenities_gestalt$§!, §Y$tec_loc_unity$§! and a job bonus based on the §YEmpire predominant Ethics§!."
  mod_job_tec_machine_admin_drone_add:0 "$job_tec_machine_admin_drone$ Jobs"
  mod_job_tec_machine_admin_drone_per_pop:0 "§G+1§! $job_tec_machine_admin_drone$ Job Per $VALUE$ Pops"
  mod_job_tec_machine_admin_drone_per_pop_short:0 "\n§G+1§! £job_tec_machine_admin_drone_add£ per $VALUE$ £pop£"
@@ -2946,23 +2946,15 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_reef_miner:0 "Litho-Reef Miner"
  job_tec_reef_miner_plural:0 "Litho-Reef Miner"
  job_tec_reef_miner_desc:0 "Using traditional cultivation techniques, these miners sow and extract rich parts of lithoreefs providing a nerverending stream of highly rich minerals."
- job_tec_reef_miner_effect_desc:0 "£job_tec_reef_miner£ $job_tec_reef_miner_plural$ produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
+ job_tec_reef_miner_effect_desc:0 "['concept_tec_tec_reef_miner_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_trade_value$§!."
  mod_job_tec_reef_miner_add:0 "$job_tec_reef_miner$ Jobs"
  mod_job_tec_reef_miner_per_pop:0 "§G+1§! $job_tec_reef_miner$ Job per $VALUE$ Pops"
  mod_job_tec_reef_miner_per_pop_short:0 "\n§G+1§! £mod_job_tec_reef_miner_add£ per $VALUE$ £pop£"
 
- job_tec_hydrogenerator_drone:0 "Hydro-relay Drone"
- job_tec_hydrogenerator_drone_plural:0 "Hydro-relay Drones"
- job_tec_hydrogenerator_drone_desc:0 "Drones dedicated to overview, maitain and ensure a constant stream of hydrogen isotopes production."
- job_tec_hydrogenerator_drone_effect_desc:0 "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone_plural$ produce £physics£ §YPhysics§! research and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
- mod_job_tec_hydrogenerator_drone_add:0 "$job_tec_hydrorelay_drone$ Jobs"
- mod_job_tec_hydrogenerator_drone_per_pop:0 "§G+1§! $job_tec_hydrorelay_drone$ Job per $VALUE$ Pops"
- mod_job_tec_hydrogenerator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hydrorelay_drone_add£ per $VALUE$ £pop£"
-
  job_tec_thermogenerator_drone:0 "Thermogenerator Drone"
  job_tec_thermogenerator_drone_plural:0 "Thermogenerator Drones"
  job_tec_thermogenerator_drone_desc:0 "Thermogenerator Drones maintain and supervise the infrastructure deep within the oceanic depths, generating energy from the thermogenearting processes down there."
- job_tec_thermogenerator_drone_effect_desc:0 "£job_tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$ produce §Y$tec_loc_energy$§! and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
+ job_tec_thermogenerator_drone_effect_desc:0 "['concept_tec_job_tec_thermogenerator_drone_plural_icon'] produce §Y$tec_loc_energy$§! and §Y$tec_loc_amenities_gestalt$§!."
  mod_job_tec_thermogenerator_drone_add:0 "$job_tec_thermogenerator_drone$ Jobs"
  mod_job_tec_thermogenerator_drone_per_pop:0 "§G+1§! $job_tec_thermogenerator_drone$ Job per $VALUE$ Pops"
  mod_job_tec_thermogenerator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_thermogenerator_drone_add£ per $VALUE$ £pop£"
@@ -2970,7 +2962,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_hydrorelay_drone:0 "Hydro-relay Drone"
  job_tec_hydrorelay_drone_plural:0 "Hydro-relay Drones"
  job_tec_hydrorelay_drone_desc:0 "Drones dedicated to overview, maitain and ensure a constant stream of hydrogen isotopes production."
- job_tec_hydrorelay_drone_effect_desc:0 "£job_tec_hydrorelay_drone£ $job_tec_hydrorelay_drone_plural$ produce £physics£ §YPhysics§! research and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
+ job_tec_hydrorelay_drone_effect_desc:0 "['concept_tec_job_tec_hydrorelay_drone_plural_icon'] produce §Y$tec_loc_physics$§! and §Y$tec_loc_amenities_gestalt$§!."
  mod_job_tec_hydrorelay_drone_add:0 "$job_tec_hydrorelay_drone$ Jobs"
  mod_job_tec_hydrorelay_drone_per_pop:0 "§G+1§! $job_tec_hydrorelay_drone$ Job per $VALUE$ Pops"
  mod_job_tec_hydrorelay_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hydrorelay_drone_add£ per $VALUE$ £pop£"
@@ -2978,7 +2970,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_aqua_drone:0 "Aquadrone"
  job_tec_aqua_drone_plural:0 "Aquadrones"
  job_tec_aqua_drone_desc:0 "Specialized drones with the task of caring, nurturing and controlling the underwater production of biomass."
- job_tec_aqua_drone_effect_desc:0 "£job_tec_aqua_drone£ $job_tec_aqua_drone_plural$ produce §Y$tec_loc_food$§! and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
+ job_tec_aqua_drone_effect_desc:0 "['concept_tec_job_tec_aqua_drone_plural_icon'] produce §Y$tec_loc_food$§! and §Y$tec_loc_amenities_gestalt$§!."
  mod_job_tec_aqua_drone_add:0 "$job_tec_aqua_drone$ Jobs"
  mod_job_tec_aqua_drone_per_pop:0 "§G+1§! $job_tec_aqua_drone$ Job per $VALUE$ Pops"
  mod_job_tec_aqua_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_aqua_drone_add£ per $VALUE$ £pop£"
@@ -2986,7 +2978,7 @@ job_tec_master_roboticist_effect_t3_desc:0 "\nAfter the upgrade, £job_tec_robot
  job_tec_reef_drone:0 "Reef Drone"
  job_tec_reef_drone_plural:0 "Reef Drones"
  job_tec_reef_drone_desc:0 "Specialized drones with the task of caring, nurturing and controlling vast petroreefs, harvesting rich materials and minerals."
- job_tec_reef_drone_effect_desc:0 "£job_tec_reef_drone£ $job_tec_reef_drone_plural$ produce §Y$tec_loc_minerals$§! and £mod_planet_amenities_no_happiness_add£ §YAmenities§!."
+ job_tec_reef_drone_effect_desc:0 "['concept_tec_job_tec_reef_drone_plural_icon'] produce §Y$tec_loc_minerals$§! and §Y$tec_loc_amenities_gestalt$§!."
  mod_job_tec_reef_drone_add:0 "$job_tec_reef_drone$ Jobs"
  mod_job_tec_reef_drone_per_pop:0 "§G+1§! $job_tec_reef_drone$ Job per $VALUE$ Pops"
  mod_job_tec_reef_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_reef_drone_add£ per $VALUE$ £pop£"
