--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -323,7 +323,7 @@ tec_hydrocentric_flood_planets: "With the §YHydrocentric§! you can flood speci
  civic_tooltip_tec_syndical_effects:0 "Each upgrade of the £building£ §YCapital§! will provide a £job_labour_hero£ §Y$job_labour_hero$§! job.\nNon-Arcology £district£ §YMenial§! Districts provide §G+1§! extra job each and have §R0.25§! increased $tec_loc_energy$ upkeep.\n\n"
 
  # Anglers swap
- civic_tooltip_tec_anglers_lithoid_effects:1 "On §HOcean Worlds§!, §HAgriculture Districts§! are uncapped.\nOn §YWet§! worlds, £job_farmer£ §Y$job_farmer_plural$§! are replaced by £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! §Y$tec_loc_food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y3§! §Y$tec_loc_consumer_goods$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait."
+ civic_tooltip_tec_anglers_lithoid_effects:1 "On §Y(Wet Climate)§! worlds, §HMining Districts§! are replaced by §HPetro-Reef Districts§!.\n§HPetro-Reef Districts§! are uncapped, cost §Y50§! less $tec_loc_minerals$ on §HOcean§! or §HPerfect§! Worlds, and provide ['concept_tec_tec_reef_miner_plural_icon'] and ['concept_tec_job_pearl_diver_lithoid_plural_icon'].\nAdds the §H$trait_aquatic$§! trait.\n\nWith the §YHydrocentric§! you can flood specific planet types depending on your origin."
 
  # former civic_private_militaries
  civic_tec_private_militaries:0 "Private Militaries"
