--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -329,4 +329,16 @@ concept_tec_district_tec_aqua_mining_hive: "$district_tec_aqua_mining$"
 concept_tec_district_tec_aqua_mining_hive_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining$"
 concept_tec_district_tec_aqua_mining_hive_plural: "$district_tec_aqua_mining_plural$"
 concept_tec_district_tec_aqua_mining_hive_plural_icon: "£district_tec_aqua_mining£ $district_tec_aqua_mining_plural$"
-concept_tec_district_tec_aqua_mining_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_reef_drone_add£ $mod_job_tec_reef_drone_add$: §G+1§!\n£mod_job_pearl_diver_add£ $mod_job_pearl_diver_add$: §G+1§!\n\n$job_tec_reef_miner_effect_desc$\n$job_tec_depth_drone_effect_desc$"
+concept_tec_district_tec_aqua_mining_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_reef_drone_add£ $mod_job_tec_reef_drone_add$: §G+1§!\n£mod_job_tec_depth_drone_add£ $mod_job_tec_depth_drone_add$: §G+1§!\n\n$job_tec_reef_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$"
+
+concept_tec_district_tec_aqua_farming_regular: "$district_tec_aqua_farming$"
+concept_tec_district_tec_aqua_farming_regular_icon: "£district_tec_aqua_farming£ $district_tec_aqua_farming$"
+concept_tec_district_tec_aqua_farming_regular_plural: "$district_tec_aqua_farming_plural$"
+concept_tec_district_tec_aqua_farming_regular_plural_icon: "£district_tec_aqua_farming£ $district_tec_aqua_farming_plural$"
+concept_tec_district_tec_aqua_farming_regular_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_angler_add£ $mod_job_angler_add$: §G+1§!\n£mod_job_pearl_diver_add£ $mod_job_pearl_diver_add$: §G+1§!\n\n$job_angler_effect_desc$\n$job_pearl_diver_lithoid_effect_desc$"
+
+concept_tec_district_tec_aqua_farming_hive: "$district_tec_aqua_farming$"
+concept_tec_district_tec_aqua_farming_hive_icon: "£district_tec_aqua_farming£ $district_tec_aqua_farming$"
+concept_tec_district_tec_aqua_farming_hive_plural: "$district_tec_aqua_farming_plural$"
+concept_tec_district_tec_aqua_farming_hive_plural_icon: "£district_tec_aqua_farming£ $district_tec_aqua_farming_plural$"
+concept_tec_district_tec_aqua_farming_hive_desc: "$tec_loc_housing$: §G+2§!\n£mod_job_tec_aqua_drone_add£ $mod_job_tec_aqua_drone_add$: §G+1§!\n£mod_job_tec_depth_drone_add£ $mod_tec_depth_drone_diver_add$: §G+1§!\n\n$job_tec_aqua_drone_effect_desc$\n$job_tec_depth_drone_effect_desc$"
