--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -59,6 +59,8 @@
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
+	tec_loc_amenities: "£crime£ $PLANET_AMENITIES_TITLE$"
+	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
