--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -1,5 +1,7 @@
-﻿l_english: #---------------------------------------------------------------
-#	AUTHORITIES
+﻿l_english: 
+
+# ------------------------------------------------------------
+#AUTHORITIES
 # ---------------------------------------------------------------
  auth_direct_democratic:0 "Direct Democracy"
  auth_direct_democratic_desc:0 "With people being directly involved in governing and deciding on policy initiatives, bureaucratic efficiency is increased and both social and economical development are accelerated."
