--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -41,7 +41,7 @@
 	tec_loc_food_or_minerals:0 "$tec_loc_food$ or $tec_loc_minerals$"
 	tec_loc_food_and_minerals:0 "$tec_loc_food$ or $tec_loc_minerals$"
 
-	tec_loc_basic_resources:0 "$tec_loc_basic_resources$"
+	tec_loc_basic_resources:0 "£trigger_tec_basic_resources£ §YBasic Resources§!"
 	tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ §YManufactured Resources§!"
 
 
@@ -53,7 +53,7 @@
  tec_loc_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
  tec_loc_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
  tec_loc_volatile_motes:0 "£volatile_motes£ §Y$volatile_motes$§!"
- tec_loc_minor_artifacts:0 "£minor_artifacts£ $§Yminor_artifacts$§!"
+ tec_loc_minor_artifacts:0 "£minor_artifacts£ §Y$minor_artifacts$§!"
 
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
