Update to beta code

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -102,9 +102,9 @@
 		policy_option_tec_authoritarian_lenient_flag:0 "A"
 		policy_option_tec_authoritarian_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_authoritarian_standard_name:0 "A"
-		policy_option_tec_authoritarian_standard_flag:0 "A"
-		policy_option_tec_authoritarian_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_authoritarian_default_name:0 "A"
+		policy_option_tec_authoritarian_default_flag:0 "A"
+		policy_option_tec_authoritarian_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_authoritarian_oppressive_name:0 "A"
 		policy_option_tec_authoritarian_oppressive_flag:0 "A"
@@ -125,9 +125,9 @@
 		policy_flag_tec_pacifist_lenient:0 "A"
 		policy_option_tec_pacifist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pacifist_standard_name:0 "A"
-		policy_option_tec_pacifist_standard_flag:0 "A"
-		policy_option_tec_pacifist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_pacifist_default_name:0 "A"
+		policy_option_tec_pacifist_default_flag:0 "A"
+		policy_option_tec_pacifist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_pacifist_oppressive_name:0 "A"
 		policy_option_tec_pacifist_oppressive_flag:0 "A"
@@ -140,17 +140,17 @@
 		policy_tec_xenophobe_control:0 "TO DO NAME"
 		policy_tec_xenophobe_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_xenophobe_lenient_name:0 "A"
-		policy_option_tec_xenophobe_lenient_flag:0 "A"
-		policy_option_tec_xenophobe_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophobe_isolation_name:0 "Xenophobic Isolationism"
+		policy_option_tec_xenophobe_isolation_flag:0 "A"
+		policy_option_tec_xenophobe_isolation_desc:0 "We .\n\n§ETO DO§!"
 
-		policy_option_tec_xenophobe_standard_name:0 "A"
-		policy_option_tec_xenophobe_standard_flag:0 "A"
-		policy_option_tec_xenophobe_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophobe_default_name:0 "Xenophobic Suspicion"
+		policy_option_tec_xenophobe_default_flag:0 "A"
+		policy_option_tec_xenophobe_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophobe_oppressive_name:0 "A"
-		policy_option_tec_xenophobe_oppressive_flag:0 "A"
-		policy_option_tec_xenophobe_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophobe_hate_name:0 "Xenophobic Hate"
+		policy_option_tec_xenophobe_hate_flag:0 "A"
+		policy_option_tec_xenophobe_hate_desc:0 "Those who are not like us pose a constant threat, a hidden menace. We must not tolerate it, we must not tolerate them.\n\n§ETO DO§!"
 
 		#- Xenophile
 		#	> Add: can host gestalt pops
@@ -161,17 +161,17 @@
 		policy_tec_xenophile_control:0 "TO DO NAME"
 		policy_tec_xenophile_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_xenophile_lenient_name:0 "A"
-		policy_option_tec_xenophile_lenient_flag:0 "A"
-		policy_option_tec_xenophile_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophile_diversity_name:0 "Xenophile Diversity"
+		policy_option_tec_xenophile_diversity_flag:0 "A"
+		policy_option_tec_xenophile_diversity_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophile_standard_name:0 "A"
-		policy_option_tec_xenophile_standard_flag:0 "A"
-		policy_option_tec_xenophile_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophile_default_name:0 "Xenophile Openness"
+		policy_option_tec_xenophile_default_flag:0 "A"
+		policy_option_tec_xenophile_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_xenophile_oppressive_name:0 "A"
-		policy_option_tec_xenophile_oppressive_flag:0 "A"
-		policy_option_tec_xenophile_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_xenophile_integration_name:0 "Xenophile Integration"
+		policy_option_tec_xenophile_integration_flag:0 "A"
+		policy_option_tec_xenophile_integration_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Competitive
 		#	> +10-20% Trade value
@@ -181,17 +181,17 @@
 		policy_tec_competitive_control:0 "TO DO NAME"
 		policy_tec_competitive_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_competitive_lenient_name:0 "A"
+		policy_option_tec_competitive_lenient_name:0 "Competitive Flexibility"
 		policy_option_tec_competitive_lenient_flag:0 "A"
 		policy_option_tec_competitive_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_competitive_standard_name:0 "A"
-		policy_option_tec_competitive_standard_flag:0 "A"
-		policy_option_tec_competitive_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_competitive_default_name:0 "Competitive Market"
+		policy_option_tec_competitive_default_flag:0 "A"
+		policy_option_tec_competitive_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_competitive_oppressive_name:0 "A"
-		policy_option_tec_competitive_oppressive_flag:0 "A"
-		policy_option_tec_competitive_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_competitive_profit_name:0 "Competitive Profiteering"
+		policy_option_tec_competitive_profit_flag:0 "A"
+		policy_option_tec_competitive_profit_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Cooperative
 		#	> Remove pop housing usage
@@ -201,17 +201,17 @@
 		policy_tec_cooperative_control:0 "TO DO NAME"
 		policy_tec_cooperative_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_cooperative_lenient_name:0 "A"
-		policy_option_tec_cooperative_lenient_flag:0 "A"
-		policy_option_tec_cooperative_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_social_name:0 "Cooperative Fundings"
+		policy_option_tec_cooperative_social_flag:0 "A"
+		policy_option_tec_cooperative_social_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_cooperative_standard_name:0 "A"
-		policy_option_tec_cooperative_standard_flag:0 "A"
-		policy_option_tec_cooperative_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_default_name:0 "Cooperative Efforts"
+		policy_option_tec_cooperative_default_flag:0 "A"
+		policy_option_tec_cooperative_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_cooperative_oppressive_name:0 "A"
-		policy_option_tec_cooperative_oppressive_flag:0 "A"
-		policy_option_tec_cooperative_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_social_name:0 "Cooperative Distribution"
+		policy_option_tec_cooperative_social_flag:0 "A"
+		policy_option_tec_cooperative_social_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Elitist
 		#	> Good as it is, i think
@@ -221,15 +221,15 @@
 		policy_tec_elitist_control:0 "TO DO NAME"
 		policy_tec_elitist_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_elitist_lenient_name:0 "A"
+		policy_option_tec_elitist_lenient_name:0 "Elitist "
 		policy_option_tec_elitist_lenient_flag:0 "A"
 		policy_option_tec_elitist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_elitist_standard_name:0 "A"
-		policy_option_tec_elitist_standard_flag:0 "A"
-		policy_option_tec_elitist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_elitist_default_name:0 "Elitist Flexibility"
+		policy_option_tec_elitist_default_flag:0 "A"
+		policy_option_tec_elitist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_elitist_oppressive_name:0 "A"
+		policy_option_tec_elitist_oppressive_name:0 "Elitist Promotion"
 		policy_option_tec_elitist_oppressive_flag:0 "A"
 		policy_option_tec_elitist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
 
@@ -245,9 +245,9 @@
 		policy_option_tec_pluralist_lenient_flag:0 "A"
 		policy_option_tec_pluralist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_pluralist_standard_name:0 "A"
-		policy_option_tec_pluralist_standard_flag:0 "A"
-		policy_option_tec_pluralist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_pluralist_default_name:0 "A"
+		policy_option_tec_pluralist_default_flag:0 "A"
+		policy_option_tec_pluralist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_pluralist_oppressive_name:0 "A"
 		policy_option_tec_pluralist_oppressive_flag:0 "A"
@@ -279,9 +279,9 @@
 		policy_option_tec_industrialist_lenient_flag:0 "A"
 		policy_option_tec_industrialist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_industrialist_standard_name:0 "A"
-		policy_option_tec_industrialist_standard_flag:0 "A"
-		policy_option_tec_industrialist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_default_name:0 "A"
+		policy_option_tec_industrialist_default_flag:0 "A"
+		policy_option_tec_industrialist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_industrialist_oppressive_name:0 "A"
 		policy_option_tec_industrialist_oppressive_flag:0 "A"
@@ -300,9 +300,9 @@
 		policy_option_tec_ecologist_lenient_flag:0 "A"
 		policy_option_tec_ecologist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_ecologist_standard_name:0 "A"
-		policy_option_tec_ecologist_standard_flag:0 "A"
-		policy_option_tec_ecologist_standard_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_ecologist_default_name:0 "A"
+		policy_option_tec_ecologist_default_flag:0 "A"
+		policy_option_tec_ecologist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_ecologist_oppressive_name:0 "A"
 		policy_option_tec_ecologist_oppressive_flag:0 "A"
@@ -547,8 +547,8 @@
 	policy_tec_fleet_distribution_desc:0 "A."
 
 	policy_tec_fleet_distribution_standard:0 "Standard Fleet Distribution"
-	policy_tec_fleet_distribution_standard_name:0 "$policy_tec_fleet_distribution_standard$"
-	policy_tec_fleet_distribution_standard_desc:0 "TO DO.\n\n§EThis policy has no effect.§!"
+	policy_tec_fleet_distribution_default_name:0 "$policy_tec_fleet_distribution_standard$"
+	policy_tec_fleet_distribution_default_desc:0 "TO DO.\n\n§EThis policy has no effect.§!"
 
 	policy_tec_fleet_distribution_quantity:0 "Extensive Fleet Distribution"
 	policy_tec_fleet_distribution_quantity_name:0 "$policy_tec_fleet_distribution_quantity$"
@@ -568,8 +568,8 @@
 	policy_tec_government_enforcers_desc:0 "A."
 
 	policy_tec_government_enforcers_standard:0 "Standard Vigilance"
-	policy_tec_government_enforcers_standard_name:0 "$policy_tec_government_enforcers_standard$"
-	policy_tec_government_enforcers_standard_desc:0 "The duty of our protectors is to keep our people safe and any possible deviation or crime controlled.\n\n§EThis policy has no effect.§!"
+	policy_tec_government_enforcers_default_name:0 "$policy_tec_government_enforcers_standard$"
+	policy_tec_government_enforcers_default_desc:0 "The duty of our protectors is to keep our people safe and any possible deviation or crime controlled.\n\n§EThis policy has no effect.§!"
 
 	policy_tec_government_enforcers_repression:0 "Repressive Vigilance"
 	policy_tec_government_enforcers_repression_name:0 "$policy_tec_government_enforcers_repression$"
@@ -589,8 +589,8 @@
 	policy_tec_government_healthcare_desc:0 "A."
 
 	policy_tec_government_healthcare_standard:0 "Standard Healthcare"
-	policy_tec_government_healthcare_standard_name:0 "$policy_tec_government_healthcare_standard$"
-	policy_tec_government_healthcare_standard_desc:0 "to do"
+	policy_tec_government_healthcare_default_name:0 "$policy_tec_government_healthcare_standard$"
+	policy_tec_government_healthcare_default_desc:0 "to do"
 
 	policy_tec_government_healthcare_private:0 "Private Healthcare"
 	policy_tec_government_healthcare_private_name:0 "$policy_tec_government_healthcare_private$"
@@ -610,8 +610,8 @@
 	policy_tec_government_healthcare_desc:0 "A."
 
 	policy_tec_government_healthcare_standard:0 "Standard Healthcare"
-	policy_tec_government_healthcare_standard_name:0 "$policy_tec_government_healthcare_standard$"
-	policy_tec_government_healthcare_standard_desc:0 "to do"
+	policy_tec_government_healthcare_default_name:0 "$policy_tec_government_healthcare_standard$"
+	policy_tec_government_healthcare_default_desc:0 "to do"
 
 	policy_tec_government_healthcare_private:0 "Private Healthcare"
 	policy_tec_government_healthcare_private_name:0 "$policy_tec_government_healthcare_private$"
@@ -631,8 +631,8 @@
 	policy_tec_government_healthcare_desc:0 "A."
 
 	policy_tec_government_healthcare_standard:0 "Standard Healthcare"
-	policy_tec_government_healthcare_standard_name:0 "$policy_tec_government_healthcare_standard$"
-	policy_tec_government_healthcare_standard_desc:0 "to do"
+	policy_tec_government_healthcare_default_name:0 "$policy_tec_government_healthcare_standard$"
+	policy_tec_government_healthcare_default_desc:0 "to do"
 
 	policy_tec_government_healthcare_private:0 "Private Healthcare"
 	policy_tec_government_healthcare_private_name:0 "$policy_tec_government_healthcare_private$"
