--- a/localisation/english/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/zz_evolved_ethics_authorities_l_english.yml
@@ -43,7 +43,7 @@
  AUTH_TEC_HIVE_BIO_DIFF_SET:0 "§RAUTHORITY TEMPORARILY DISABLED§! §EThis authority changes gameplay and building visual and effect sets.§!\n\n"
  AUTH_TEC_HIVE_BIO_PRODUCTION_BONUS:0 "§EAssembly Bonus:§! £building£ Swarm Capitals provide £mod_pop_growth_speed£ +§G2§!	Organic assembly.\n"
  AUTH_TEC_HIVE_BIO_DISTRICT_BONUS:0 "§EDistrict Bonus:§! Each §H£district£ Menial District§! provides §H1 extra £job£ Job§!.\n"
- AUTH_TEC_HIVE_BIO_BUILDING_BONUS:0 "§ESpecific Mechanic:§! £building£ Buildings have a shared cosf of $tec_loc_food$ and $tec_loc_minerals$, and have Food upkeep.\n"
+ AUTH_TEC_HIVE_BIO_BUILDING_BONUS:0 "§ESpecific Mechanic:§! £building£ Buildings have a shared cost of $tec_loc_food$ and $tec_loc_minerals$, and have Food upkeep.\n"
 #Can create £building£ §YBiomass Germinators§! which boost the planet $tec_loc_food$ production and converts £minerals£ £energy£ other resources into food.\n
  AUTH_TEC_HIVE_BIO_ONLY_SPAWNING_POOLS:0 "§ERestriction:§! Can only breed and assemble £mod_pop_growth_speed£ §HOrganic Drones§!.\n"
  AUTH_TEC_HIVE_BIO_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
@@ -257,7 +257,7 @@ TEC_GESTALT_ETHIC_LEADER_MECHANIC:0 "§ELeaders will gain additional levels scal
 #phile
 #REWORKED GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EAllows §HMigration pacts§! with regular empires or other §HEmpathic Gestalts§!§!"
 GESTALT_ETHIC_STARTS_WITH_FRIENDSHIP:0 "§EUnlocks the §HEmpathic Friendship§! technology; this technology allows both gaining non-hivemind organic pops and producing Consumer Goods.§!"
-GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EMay randomly gain a £pops£ §HNon gestalt pop§! from empires with good relations or in the same Federation, if the empire can £consumer_goods£ substain that population.§!"
+GESTALT_ETHIC_ALLOWS_MIGRATION:0 "§EMay randomly gain a £pops£ §HNon gestalt pop§! from empires with good relations or in the same Federation, if the empire can £consumer_goods£ sustain that population.§!"
 GESTALT_ETHIC_EMPATHY:0 "§EReduces the £opinion£ Opinion penalty Gestalt consciousness normally have with other empires.§!"
 
 #phobe
