--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -275,17 +275,17 @@
 		policy_tec_industrialist_control:0 "TO DO NAME"
 		policy_tec_industrialist_control_desc:0 "TO DO DESC"
 
-		policy_option_tec_industrialist_lenient_name:0 "A"
-		policy_option_tec_industrialist_lenient_flag:0 "A"
-		policy_option_tec_industrialist_lenient_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_production_name:0 "Industrialist Growth"
+		policy_option_tec_industrialist_production_flag:0 "A"
+		policy_option_tec_industrialist_production_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_industrialist_default_name:0 "A"
+		policy_option_tec_industrialist_default_name:0 "Industrialist Development"
 		policy_option_tec_industrialist_default_flag:0 "A"
 		policy_option_tec_industrialist_default_desc:0 "TO DO.\n\n§ETO DO§!"
 
-		policy_option_tec_industrialist_oppressive_name:0 "A"
-		policy_option_tec_industrialist_oppressive_flag:0 "A"
-		policy_option_tec_industrialist_oppressive_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_development_name:0 "Industrialist Overdrive"
+		policy_option_tec_industrialist_development_flag:0 "A"
+		policy_option_tec_industrialist_development_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		#- Ecologist
 		#	> Remove consumer goods upkeep
